to way binding with ngModel

--- a/base-app/src/app/app.component.html
+++ b/base-app/src/app/app.component.html
@@ -2,6 +2,6 @@
     Welcome to Dinamic two way data binding!
   </h1>
   
-<input type="text" [value]="title" (input)="onInput($event)">
+<input type="text" [(ngModel)]="title">
 
 <p>{{title}}</p>
