--- a/base-app/src/app/app.component.html
+++ b/base-app/src/app/app.component.html
@@ -1,7 +1,15 @@
 <h1>
-    Welcome to Dinamic two way data binding!
-  </h1>
-  
-<input type="text" [(ngModel)]="title">
+    Welcome to Angular!
+</h1>
 
-<p>{{title}}</p>
+<button (click)="backgroundToggle = !backgroundToggle">Toggle</button>
+  
+<div [ngStyle]="{
+  width: '200px',
+  height: '200px',
+  borderRadius: '5px',
+  border: '1px solid #ccc',
+  background: backgroundToggle ? 'red' : 'blue'
+
+}">
+</div>
