--- a/base-app/src/app/app.component.scss
+++ b/base-app/src/app/app.component.scss
@@ -2,3 +2,15 @@ img {
     width: 200px;
             
 }
+
+.red {
+    background: red;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.blue {
+   background: blue;
+   font-size: 1.5rem;
+   color: #ffffff; 
+}
