--- a/base-app/src/app/app.component.html
+++ b/base-app/src/app/app.component.html
@@ -2,7 +2,27 @@
     Welcome to Angular!
 </h1>
 
-<button (click)="toggle = !toggle">Toggle</button>
+<!-- <ul>
+  <li *ngFor="let number of arr; let idx = index">
+    {{ idx + 1 }} <strong>{{ number }}</strong>
+  </li>
+</ul>   -->
+
+<ul style= "list-style: none">
+  <li *ngFor="let post of objs">
+    <p>{{post.title}} <b>{{post.author}}</b></p>
+    <ul>
+      <li *ngFor="let comment of post.comments">
+        <div>
+          <small>{{comment.name}}</small>
+          <p>{{comment.text}}</p>
+        </div>
+      </li>
+    </ul>
+  </li>
+</ul>
+
+<!-- <button (click)="toggle = !toggle">Toggle</button>
 
 <button (click)="toggle = 111">Set 111</button>
 
@@ -18,7 +38,7 @@
   <p *ngSwitchDefault>
     Lorem ipsum.
   </p>
-</div>
+</div> -->
 
 
  <!-- <p *ngIf="toggle; else blueP" class="red">
