--- a/base-app/src/app/post/post.component.html
+++ b/base-app/src/app/post/post.component.html
@@ -1,12 +1,3 @@
-<div class="post">
-
-<h2>Post title</h2>
-
-  <p>
-    post works! Lorem, ipsum dolor sit amet consectetur 
-    adipisicing elit. Consequatur esse harum facilis minima 
-    repellat saepe modi quisquam inventore ducimus recusandae.
-  </p>
-</div>
-
-
+<p>
+  post works!
+</p>
