Working with components

--- a/base-app/src/app/app.component.html
+++ b/base-app/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
     <h1>Angular Components</h1>
+    <h2>Subheader</h2>
     
     <app-post-form
         (onAdd)="updatePosts($event)"
@@ -10,7 +11,17 @@
     <app-post
         *ngFor="let p of posts"
         [post]="p"
-    ></app-post>
+        (onRemove)="removePost($event)"
+    >
+    <div #info>
+        <small *ngIf="p.text.length > 10; else short">The post is long</small>
+        <ng-template #short>
+            <small>The post is short</small>
+        </ng-template>
+    </div>
+    
+
+    </app-post>
     
 </div>
 
