--- a/base-app/src/styles.scss
+++ b/base-app/src/styles.scss
@@ -1,4 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
 
 * {
@@ -67,7 +67,7 @@ textarea {
     width: 100%;
     padding: 0.4rem;
     font-size: 1.2rem;
-    border: 1px solid #000;
+    border: 1px solid #ccc;
     margin: 1.2rem 0;
 }
 
