working with directives

--- a/basics-app/src/app/app.component.html
+++ b/basics-app/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <h1>Angular Directives</h1>
-  <p appStyle>Bootstrap имеет некоторые предопределенные
-   стили кнопок, каждый из которых имеет свою
+  <p [appStyle]="'red'" fontWeight="bold">
+    Bootstrap имеет некоторые предопределенные
+    стили кнопок, каждый из которых имеет свою
     семантическую цель, и имеет дополнительные
-     параметры для большего контроля и гибкости.</p>
+    параметры для большего контроля и гибкости.
+    </p>
 </div>
